--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,8 @@ before_install: "git clone -b travis `git config --get remote.origin.url` target
 
 addons:
   sonarcloud:
-    organization: "jmrozanec-github"
-    token:
-      secure: "ZmVdpiC5ivHP72R7NZsv3s9XM9WuZQ//psUbpxJf+HLJGes+dAUppkiIBBICLwGstCCdyfTx1XaW56Gh2zTohrNBhv2S7OmrWwp8+o+dCIb1k6B4PsQ3b6h5bplcorAItMstoBZB8EowG875QENwlrZuB/qBHGy61vgERiNzPgA="
+    organization: "naxos84-github"
+    
 script:
    - > 
      if [ "$TRAVIS_PULL_REQUEST" != "false" ];then 
