--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
    - > 
      if [ "$TRAVIS_PULL_REQUEST" != "false" ];then 
         mvn org.jacoco:jacoco-maven-plugin:prepare-agent package --settings target/travis/settings.xml -Dsettings.security=target/travis/settings-security.xml -Dmaven.javadoc.skip=true;
-        sonar-scanner
+        sonar-scanner -X
      fi
    - > 
      if [ "$TRAVIS_PULL_REQUEST" = "false" ];then 
