Reverting changes for test.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,13 +6,8 @@ sonar.projectKey=cron-utils
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
-sonar.sources=src/main/java
-sonar.tests=src/test/java
+sonar.sources=.
 sonar.java.binaries=target/classes
-
-sonar.links.issue=https://github.com/jmrozanec/cron-utils/issues
-sonar.links.scm=https://github.com/jmrozanec/cron-utils
-sonar.links.ci=https://travis-ci.org/jmrozanec/cron-utils
 
  
 # Encoding of the source code. Default is default system encoding
