--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,14 @@ before_install: "git clone -b travis `git config --get remote.origin.url` target
 
 addons:
   sonarcloud:
-    organization: "naxos84-github"
-    
+    organization: "jmrozanec-github"
+    token:
+      secure: "ZmVdpiC5ivHP72R7NZsv3s9XM9WuZQ//psUbpxJf+HLJGes+dAUppkiIBBICLwGstCCdyfTx1XaW56Gh2zTohrNBhv2S7OmrWwp8+o+dCIb1k6B4PsQ3b6h5bplcorAItMstoBZB8EowG875QENwlrZuB/qBHGy61vgERiNzPgA="
 script:
    - > 
      if [ "$TRAVIS_PULL_REQUEST" != "false" ];then 
         mvn org.jacoco:jacoco-maven-plugin:prepare-agent package --settings target/travis/settings.xml -Dsettings.security=target/travis/settings-security.xml -Dmaven.javadoc.skip=true;
-        sonar-scanner -X
+        sonar-scanner
      fi
    - > 
      if [ "$TRAVIS_PULL_REQUEST" = "false" ];then 
