--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,11 @@ addons:
 script:
    - > 
      if [ "$TRAVIS_PULL_REQUEST" != "false" ];then 
-        mvn org.jacoco:jacoco-maven-plugin:prepare-agent package --settings target/travis/settings.xml -Dsettings.security=target/travis/settings-security.xml -Dmaven.javadoc.skip=true;
-        sonar-scanner
+        mvn org.jacoco:jacoco-maven-plugin:prepare-agent package --settings target/travis/settings.xml -Dsettings.security=target/travis/settings-security.xml -Dmaven.javadoc.skip=true sonar:sonar;
      fi
    - > 
      if [ "$TRAVIS_PULL_REQUEST" = "false" ];then 
-        mvn org.jacoco:jacoco-maven-plugin:prepare-agent package deploy --settings target/travis/settings.xml -Dsettings.security=target/travis/settings-security.xml -Dmaven.javadoc.skip=true;
-        sonar-scanner
+        mvn org.jacoco:jacoco-maven-plugin:prepare-agent package deploy --settings target/travis/settings.xml -Dsettings.security=target/travis/settings-security.xml -Dmaven.javadoc.skip=true sonar:sonar
      fi
 
 cache:
